fix support of dict or list def of commands

--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -2,9 +2,9 @@
 sync_devices:
   hostname:
     commands:
-      - command: "show hostname"
-        parser: "textfsm"
-        jpath: "[*].hostname"
+      command: "show hostname"
+      parser: "textfsm"
+      jpath: "[*].hostname"
   serial:
     commands:
       - command: "show version"
