fix a few device onboarding issues

--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -4,7 +4,7 @@ sync_devices:
     commands:
       - command: "show version"
         parser: "textfsm"
-        post_processor: "{{ obj[0] | upper }}"
+        # post_processor: "{{ obj[0] | upper }}"
         jpath: "[*].hostname"
   serial:
     commands:
