--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -44,16 +44,16 @@ sync_network_data:
       - command: "show interface"
         parser: "textfsm"
         jpath: "[?interface=='{{ current_key }}'].hardware_type"
-  # ip_addresses:
-  #   commands:
-  #     - command: "show ip interface vrf all"
-  #       parser: "textfsm"
-  #       jpath: "[*].{interface: interface, ip_address: ip_address}"
-  # interfaces__prefix_length:
-  #   commands:
-  #     - command: "show ip interface vrf all"
-  #       parser: "textfsm"
-  #       jpath: "[*].{interface: interface, prefix_length: subnet}"
+  interfaces__ip_addresses__ip_address:
+    commands:
+      - command: "show ip interface vrf all"
+        parser: "textfsm"
+        jpath: "[*].{interface: interface, ip_address: ip_address}"
+  interfaces__ip_addresses__prefix_length:
+    commands:
+      - command: "show ip interface vrf all"
+        parser: "textfsm"
+        jpath: "[*].{interface: interface, prefix_length: subnet}"
   interfaces__mtu:
     commands:
       - command: "show interface"
@@ -79,11 +79,11 @@ sync_network_data:
       - command: "show interface"
         parser: "textfsm"
         jpath: "[?interface=='{{ current_key }}'].mode"
-  # vrf_interfaces:
-  #   commands:
-  #     - command: "show vrf interface"
-  #       parser: "textfsm"
-  #       jpath: "[*].{interface: interface, name: name}"
+  interfaces__vrf:
+    commands:
+      - command: "show vrf interface"
+        parser: "textfsm"
+        jpath: "[?interface=='{{ current_key }}'].{name:name}"
   # vlans:
   #   commands:
   #     - command: "show vlan"
