finish renames and cleanup of old functions

--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -25,3 +25,4 @@ sync_devices:
       - command: "show ip interface brief | json"
         parser: "none"
         jpath: "interfaces.*.interfaceAddress[?ipAddr.address=='{{ obj }}'].ipAddr.maskLen"
+        post_processor: "{{ obj[0] }}"
