--- a/nautobot_device_onboarding/command_mappers/cisco_xe.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_xe.yml
@@ -34,53 +34,74 @@ sync_network_data:
       - command: "show version"
         parser: "textfsm"
         jpath: "[*].serial[0]"
-  type:
+  interfaces:
+    root_key: true
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, type: hardware_type}"
-  ip_addresses:
+        jpath: "[*].interface"  #  when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
+  interfaces__type:
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, ip_address: ip_address}"
-  prefix_length:
+        jpath: "[?interface=='{{ current_key }}'].hardware_type"
+        post_processor: "{{ obj[0] | map_interface_type }}"
+  interfaces__ip_addresses:
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, prefix_length: prefix_length}"
-  mtu:
+        jpath: "[?interface=='{{ current_key }}'].{ip_address: ip_address, prefix_length: prefix_length}"
+        iterable_type: "list"
+  interfaces__mtu:
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, mtu: mtu}"
-  mac_address:
+        jpath: "[?interface=='{{ current_key }}'].mtu"
+  interfaces__mac_address:
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, mac_address: mac_address}"
-  description:
+        jpath: "[?interface=='{{ current_key }}'].mac_address"
+  interfaces__description:
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, description: description}"
-  link_status:
+        jpath: "[?interface=='{{ current_key }}'].description"
+  interfaces__link_status:
     commands:
       - command: "show interfaces"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, link_status: link_status}"
-  vrfs:
+        jpath: "[?interface=='{{ current_key }}'].link_status"
+        post_processor: "{{ obj[0] | interface_status_to_bool }}"
+  interfaces__802.1Q_mode:
     commands:
-      - command: "show vrf"
+      - command: "show interface"
         parser: "textfsm"
-        jpath: "[*].{name: name, default_rd: default_rd, interfaces: interfaces}"
-  vlans:
+        jpath: "[?interface=='{{ current_key }}'].mode"
+        iterable_type: "str"
+  interfaces__lag:
+    commands:
+      - command: "show interface"
+        parser: "textfsm"
+        jpath: "[*].null"
+        iterable_type: "str"
+  interfaces__vrf:
+    commands:
+      - command: "show vrf interface"
+        parser: "textfsm"
+        jpath: "[?interface=='{{ current_key }}'].{name:name}"
+        iterable_type: "dict"
+  interfaces__tagged_vlans:
     commands:
       - command: "show vlan"
         parser: "textfsm"
-        jpath: "[*].{interfaces: interfaces, vlan_name: vlan_name, vlan_id: vlan_id, status: status}"
-  interface_vlans:
+        jpath: "[*].{id: vlan_id, name: vlan_name, interfaces: interfaces}"
+        post_processor: "{% set tagged_vlans = [] %}{% for v in obj %}{% if current_key in v['interfaces'] | canonical_interface_name_list %}{% set _=tagged_vlans.append({'id': v['id'], 'name': v['name']}) %}{% endif %}{% endfor %}{{ tagged_vlans | tojson }}"
+  interfaces__untagged_vlan:
     commands:
-      - command: "show interfaces switchport"
+      - command: "show vlan"
         parser: "textfsm"
-        jpath: "[*].{interface: interface, admin_mode: admin_mode, access_vlan: access_vlan, native_vlan: native_vlan, trunking_vlans: trunking_vlans, voice_vlan: voice_vlan}"
+        jpath: "[*].{id: vlan_id, name: vlan_name, interfaces: interfaces}"
+        iterable_type: "dict"
+        post_processor: "{% set untagged_vlan = [] %}{% for v in obj %}{% if current_key in v['interfaces'] | canonical_interface_name_list %}{% set _=untagged_vlan.append({'id': v['id'], 'name': v['name']}) %}{% endif %}{% endfor %}{{ untagged_vlan | tojson }}"
