--- a/nautobot_device_onboarding/command_mappers/cisco_xe.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_xe.yml
@@ -10,12 +10,14 @@ sync_devices:
     commands:
       - command: "show version"
         parser: "textfsm"
-        jpath: "[*].serial[0]"
+        jpath: "[*].serial[]"
+        post_processor: "{{ obj | unique | first }}"
   device_type:
     commands:
       - command: "show version"
         parser: "textfsm"
-        jpath: "[*].hardware[0]"
+        jpath: "[*].hardware[]"
+        post_processor: "{{ obj | unique | first }}"
   mgmt_interface:
     commands:
       - command: "show interfaces"
