Network ssot integration (#177)
* adding NI

* bump version

* black, isort, pydocstyle

* black, flake8, pydocstyle

* pylint

* update ssot network importer

* update network importer ssot

* update network importer

* update command getter

* fix filtering on NI job

* add vlan model and adapter load method

* add vlans and interface lag to sync

* updates for NI

* updated formatting, added trunked vlans

* add call to command getter

* update command getter call

* handle failed result

* update formatting

* formatting

* black

* simplify if statment

* formatting

* updates

* first work new parser with jdiff

* update structures

* please help

* fix result dict on fail

* cleanup

* update logging and bump version

* remove logging

* update lock file

* black

* getting everything reformatted still needs cleanup

* new framework for parsing outputs

* fix unused import

* get rest working

* add data type check for device on boarding network adapter

* fix format of yaml files

* new post processor feature from yaml , clean ups

* add a more advanced jdiff jpath query to ios for ni interfaces

* updates for parsing

* bump version

* update network importer

* add platform none check

* fix formatting

* add conditional for no platform

* add conditional for no platform

* add conditional for no platform

* add unsupported check

* add readtimeout

* add failed task UI logging

* add junos support to do

* add logging for failed reason

* add junos support to do

* update junos, add json load to linterfaces

* update junos, add json load to linterfaces

* update ios to use tojson filter

* update ios to use tojson filter

* formatting, update function name and doc strings

* use j2 sandbox and nb core render function

* poetry lock and black

* black

* fix juniper_junos.yml

* juniper_junos.yml formatting

* update ssot network 

--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -1,27 +1,27 @@
 ---
-device_onboarding:
+sync_devices:
   hostname:
     commands:
-      - command: "show hostname"
-        use_textfsm: true
-        jpath: "[*].hostname"
+      command: "show hostname"
+      parser: "textfsm"
+      jpath: "[*].hostname"
   serial:
     commands:
       - command: "show version"
-        use_textfsm: true
+        parser: "textfsm"
         jpath: "[*].serial_number"
   device_type:
     commands:
       - command: "show version"
-        use_textfsm: true
+        parser: "textfsm"
         jpath: "[*].model"
   mgmt_interface:
     commands:
       - command: "show ip interface brief | json"
-        use_textfsm: false
+        parser: "none"
         jpath: "interfaces.*.{name: name, match_ip: interfaceAddress.ipAddr.address=='{{ obj }}'}[? match_ip].name"
   mask_length:
     commands:
       - command: "show ip interface brief | json"
-        use_textfsm: false
+        parser: "none"
         jpath: "interfaces.*.interfaceAddress[?ipAddr.address=='{{ obj }}'].ipAddr.maskLen"
