--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "3.0.2a13"
+version = "3.1.0b1"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
@@ -29,12 +29,11 @@ include = [
 python = ">=3.8,<3.12"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = "^2.1.1"
-nautobot-ssot = "^2.5.0"
+nautobot = "^2.2.3"
+nautobot-ssot = "^2.6.0"
 nautobot-plugin-nornir = "^2.0.0"
 jdiff = "^0.0.6"
 ntc-templates = "^4.3.0"
-
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
