--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -27,3 +27,73 @@ sync_devices:
         parser: "none"
         jpath: '"route-information"[]."route-table"[]."rt"[]."rt-destination"[].data'  # yamllint disable-line rule:quoted-strings
         post_processor: "{% set mask = [] %}{% for ip_route in obj %}{% if ip_route | is_network %}{% if ip_route | ipaddress_network('version') == 4 %}{% if original_host | is_ip_within(ip_route) %}{% set _=mask.append(ip_route.split('/')[1]) %}{% endif %}{% endif %}{% endif %}{% endfor %}{{ mask | unique | first}}"
+sync_network_data:
+  serial:
+    commands:
+      - command: "show chassis hardware | display json"
+        parser: "none"
+        jpath: '"chassis-inventory"[]."chassis"[]."serial-number"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces:
+    root_key: true
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[].name[].data'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
+  interfaces__type:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."if-type"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__ip_addresses:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        # jpath: "[?interface=='{{ current_key }}'].{ip_address: ip_address, prefix_length: prefix_length}"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+        iterable_type: "list"
+  interfaces__mtu:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."mtu"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__mac_address:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__description:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."description"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__link_status:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."admin-status"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__802.1Q_mode:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__lag:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__vrf:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+  interfaces__tagged_vlans:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-string
+  interfaces__untagged_vlan:
+    commands:
+      - command: "show interfaces brief | display json"
+        parser: "none"
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
