--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -38,7 +38,7 @@ sync_network_data:
     commands:
       - command: "show interfaces brief | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[].name[].data'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        jpath: '"interface-information"[]."physical-interface"[].name[].data'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
         post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
   interfaces__type:
     commands:
