--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -36,9 +36,10 @@ sync_network_data:
   interfaces:
     root_key: true
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
-        jpath: '"interface-information"[]."physical-interface"[].name[].data'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
+        # "interface-information"[]."physical-interface"[]."logical-interface"[].name[].data
+        jpath: '"interface-information"[]."physical-interface"[].[name[].data, "logical-interface"[].name[].data][][]'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
         post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
   interfaces__type:
     commands:
@@ -61,7 +62,7 @@ sync_network_data:
     commands:
       - command: "show interfaces brief | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."hardware-physical-address"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__description:
     commands:
       - command: "show interfaces brief | display json"
