--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -83,15 +83,15 @@ sync_network_data:
         iterable_type: "str"
   interfaces__lag:
     commands:
-      - command: "show interface"
+      - command: "show etherchannel summary"
         parser: "textfsm"
-        jpath: "[*].null"
+        jpath: "[?contains(@.member_interface, `{{ current_key abbreviated_interface_name }}`)].bundle_name"
         iterable_type: "str"
   interfaces__vrf:
     commands:
-      - command: "show vrf interface"
+      - command: "show ip interface"
         parser: "textfsm"
-        jpath: "[?interface=='{{ current_key }}'].{name:name}"
+        jpath: "[?interface=='{{ current_key }}'].{name:vrf}"
         iterable_type: "dict"
   interfaces__tagged_vlans:
     commands:
