--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -86,13 +86,14 @@ sync_network_data:
       - command: "show etherchannel summary"
         parser: "textfsm"
         jpath: "[?contains(@.member_interface, `{{ current_key | abbreviated_interface_name }}`)].bundle_name"
+        post_processor: '{{ obj[0] | canonical_interface_name }}'
         iterable_type: "str"
   interfaces__vrf:
     commands:
       - command: "show ip interface"
         parser: "textfsm"
         jpath: "[?interface=='{{ current_key }}'].{name:vrf}"
-        post_processor: "{{ obj | key_exist_or_default('name') }}"
+        post_processor: "{{ obj[0] | key_exist_or_default('name') }}"
         iterable_type: "dict"
   interfaces__tagged_vlans:
     commands:
