--- a/nautobot_device_onboarding/command_mappers/cisco_xe.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_xe.yml
@@ -78,16 +78,17 @@ sync_network_data:
         post_processor: "{{ obj[0] | interface_status_to_bool }}"
   interfaces__802.1Q_mode:
     commands:
-      - command: "show interfaces"
+      - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[?interface=='{{ current_key }}'].mode"
+        jpath: "[?interface=='{{ current_key }}'].{admin_mode: admin_mode, trunking_vlans: trunking_vlans}"
+        post_processor: "{{ obj | first(default='') | interface_mode_logic }}"
         iterable_type: "str"
   interfaces__lag:
     commands:
       - command: "show etherchannel summary"
         parser: "textfsm"
         jpath: "[?contains(@.member_interface, `{{ current_key | abbreviated_interface_name }}`)].bundle_name"
-        post_processor: '{{ obj[0] | canonical_interface_name }}'
+        post_processor: '{{ obj | first(default='') | canonical_interface_name }}'
         iterable_type: "str"
   interfaces__vrf:
     commands:
@@ -97,23 +98,17 @@ sync_network_data:
         post_processor: "{{ obj[0] | key_exist_or_default('name') }}"
         iterable_type: "dict"
   interfaces__tagged_vlans:
+    # Access: One untagged VLAN
+    # Tagged: One untagged VLAN and/or one or more tagged VLANs
+    # Tagged (All): Implies all VLANs are available (w/optional untagged VLAN)
     commands:
       - command: "show vlan"
         parser: "textfsm"
-        jpath: "[*].{id: vlan_id, name: vlan_name, interfaces: interfaces}"
-        post_processor: "{% set tagged_vlans = [] %}{% for v in obj %}{% if current_key in v['interfaces'] | canonical_interface_name_list %}{% set _=tagged_vlans.append({'id': v['id'], 'name': v['name']}) %}{% endif %}{% endfor %}{{ tagged_vlans | tojson }}"
+        jpath: "[?contains(interfaces, '{{ current_key | abbreviated_interface_name }}')].{id: vlan_id, name: vlan_name}"
   interfaces__untagged_vlan:
     commands:
-      - command: "show vlan"
+      - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[*].{id: vlan_id, name: vlan_name, interfaces: interfaces}"
+        # jpath: "[*].{id: vlan_id, name: vlan_name, interfaces: interfaces}"
+        jpath: "[?contains(interface, '{{ current_key }}')].{id: native_vlan}"
         iterable_type: "dict"
-        post_processor: "{% set untagged_vlan = [] %}{% for v in obj %}{% if current_key in v['interfaces'] | canonical_interface_name_list %}{% set _=untagged_vlan.append({'id': v['id'], 'name': v['name']}) %}{% endif %}{% endfor %}{{ untagged_vlan | tojson }}"
-
-    # default_values = {
-    #     "lag": "",
-    #     "untagged_vlan": {},
-    #     "tagged_vlans": [],
-    #     "vrf": {},
-    #     "802.1Q_mode": "",
-    # }
