--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -79,15 +79,15 @@ sync_network_data:
     commands:
       - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[?interface=='{{ current_key }}'].{admin_mode: admin_mode, trunking_vlans: trunking_vlans}"
-        post_processor: "{% if obj | length > 0 %}{{ obj[0] | interface_mode_logic }}{% else %}''{% endif %}"
+        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, trunking_vlans: trunking_vlans}"
+        post_processor: "{{ obj | interface_mode_logic }}"
         iterable_type: "str"
   interfaces__lag:
     commands:
       - command: "show etherchannel summary"
         parser: "textfsm"
         jpath: "[?contains(@.member_interface, `{{ current_key | abbreviated_interface_name }}`)].bundle_name"
-        post_processor: '{{ obj | canonical_interface_name_list }}'
+        post_processor: "{% if obj | length > 0 %}{{ obj[0] | canonical_interface_name }}{% else %}{{ obj }}{% endif %}"
         iterable_type: "str"
   interfaces__vrf:
     commands:
