--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -79,7 +79,7 @@ sync_network_data:
     commands:
       - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, trunking_vlans: trunking_vlans}"
+        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, mode: mode, trunking_vlans: trunking_vlans}"
         post_processor: "{{ obj | interface_mode_logic }}"
         iterable_type: "str"
   interfaces__lag:
@@ -101,9 +101,13 @@ sync_network_data:
     # Tagged: One untagged VLAN and/or one or more tagged VLANs
     # Tagged (All): Implies all VLANs are available (w/optional untagged VLAN)
     commands:
-      - command: "show vlan"
+            # - command: "show vlan"
+            # parser: "textfsm"
+            # jpath: "[?contains(interfaces, '{{ current_key | abbreviated_interface_name }}')].{id: vlan_id, name: vlan_name}"
+      - command: "show interfaces switchport"
         parser: "textfsm"
-        jpath: "[?contains(interfaces, '{{ current_key | abbreviated_interface_name }}')].{id: vlan_id, name: vlan_name}"
+        jpath: "[?interface=='{{ current_key | abbreviated_interface_name }}'].{admin_mode: admin_mode, mode: mode, access_vlan: access_vlan, trunking_vlans: trunking_vlans}"
+        post_processor: "{{ obj | get_vlan_data | tojson }}"
   interfaces__untagged_vlan:
     commands:
       - command: "show interfaces switchport"
