--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -94,7 +94,7 @@ sync_network_data:
       - command: "show ip interface"
         parser: "textfsm"
         jpath: "[?interface=='{{ current_key }}'].{name:vrf}"
-        post_processor: "{{ obj[0] | key_exist_or_default('name') }}"
+        post_processor: "{{ obj[0] | key_exist_or_default('name') | tojson }}"
         iterable_type: "dict"
   interfaces__tagged_vlans:
     commands:
