--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -36,65 +36,69 @@ sync_network_data:
   interfaces:
     root_key: true
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
         # "interface-information"[]."physical-interface"[]."logical-interface"[].name[].data
         jpath: '"interface-information"[]."physical-interface"[].[name[].data, "logical-interface"[].name[].data][][]'  # when root_key=true this extracted value is what becomes interable in keys using __ under `current_key`.
         post_processor: "{% set result={} %}{% for interface in obj %}{{ result.update({interface: {}}) or '' }}{% endfor %}{{ result | tojson }}"
   interfaces__type:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."if-type"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."link-level-type"[].data'  # yamllint disable-line rule:quoted-strings
+        # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."if-type"[].data'  # yamllint disable-line rule:quoted-strings
+        # jpath: '{% if "." in current_key %}"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."if-type"[].data {% else %}"interface-information"[]."physical-interface"[].["logical-interface"[?name[?data==`{{ current_key }}`]]][][]'
   interfaces__ip_addresses:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
-        # jpath: "[?interface=='{{ current_key }}'].{ip_address: ip_address, prefix_length: prefix_length}"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+        # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '{% if "." in current_key %}"interface-information"[]."physical-interface"[].["logical-interface"[?name[?data==`{{ current_key }}`]]][][].{prefix: "address-family"[]."interface-address"[]."ifa-destination"[].data, ip: "address-family"[]."interface-address"[]."ifa-local"[].data}{% else %}[]'  # yamllint disable-line rule:quoted-strings
         iterable_type: "list"
   interfaces__mtu:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."mtu"[].data'  # yamllint disable-line rule:quoted-strings
+        # jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."mtu"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split('.')[0] }}`]]][][]."mtu"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__mac_address:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."hardware-physical-address"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__description:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."description"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__link_status:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."admin-status"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__802.1Q_mode:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
         jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__lag:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+        # "interface-information"[]["physical-interface"[?name[?data==`ge-1/0/3`]]][][]."logical-interface"[?name[?data=='ge-1/0/3.16386']][]
+        jpath: '"interface-information"[]."physical-interface"[?name.[?data==`{{ current_key }}`]][][]."logical-interface"[]."address-family"[]."ae-bundle-name"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__vrf:
     commands:
-      - command: "show interfaces brief | display json"
+      - command: "show interfaces routing-instance all | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
-  interfaces__tagged_vlans:
-    commands:
-      - command: "show interfaces brief | display json"
-        parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-string
-  interfaces__untagged_vlan:
-    commands:
-      - command: "show interfaces brief | display json"
-        parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."vrfname"[].data'  # yamllint disable-line rule:quoted-strings
+  # interfaces__tagged_vlans:
+  #   commands:
+  #     - command: "show interfaces brief | display json"
+  #       parser: "none"
+  #       jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-string
+  # interfaces__untagged_vlan:
+  #   commands:
+  #     - command: "show interfaces brief | display json"
+  #       parser: "none"
+  #       jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."todo"[].data'  # yamllint disable-line rule:quoted-strings
