--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -75,7 +75,7 @@ sync_network_data:
     commands:
       - command: "show interfaces | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."admin-status"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key.split(".")[0] }}`]]][][]."admin-status"[].data'  # yamllint disable-line rule:quoted-strings
   interfaces__802.1Q_mode:
     commands:
       - command: "show interfaces | display json"
