junos fix vrf jpath

--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -97,7 +97,7 @@ sync_network_data:
     commands:
       - command: "show interfaces routing-instance all | display json"
         parser: "none"
-        jpath: '"interface-information"[]["physical-interface"[?name[?data==`{{ current_key }}`]]][][]."vrfname"[].data'  # yamllint disable-line rule:quoted-strings
+        jpath: '"interface-information"[]["logical-interface"[?name[?data==`{{ current_key }}`]]][][]."vrfname"[].data'  # yamllint disable-line rule:quoted-strings
   # interfaces__tagged_vlans:
   #   commands:
   #     - command: "show interfaces brief | display json"
